# cadenza

./: .gitignore  AUTO-SYNC.md  FINGER-NUMBERING.md  LICENSE  PUBLISH-PLAN.md  README.md  SOURCE-PROMPT.md  TECH-DEBTS.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: manual-desktop-build.yml
back-end/: README.md  pyproject.toml
back-end/cadenza_server/: __init__.py  __main__.py  logging_config.py
back-end/cadenza_server/app/: __init__.py  config.py  factory.py  lifespan.py
back-end/cadenza_server/core/: __init__.py  fingering_assign.py  protocol.py  score.py  validator.py
back-end/cadenza_server/features/: __init__.py
back-end/cadenza_server/features/api/: __init__.py  schemas.py  score_router.py  ws_router.py
back-end/cadenza_server/features/hub/: __init__.py  service.py  state.py
back-end/cadenza_server/features/midi/: __init__.py  input.py
back-end/plugin/: README.md
back-end/scripts/: build-sidecar.ps1  build-sidecar.sh
back-end/server/: README.md  pyproject.toml
back-end/server/src/cadenza_server/: __init__.py  __main__.py  http_ingest.py  midi_input.py  protocol.py  score.py  server.py  validator.py
back-end/server/tests/: test_http_ingest.py  test_midi_input.py  test_protocol.py  test_score.py  test_server_integration.py  test_unvalidated_reason.py  test_validator.py
back-end/tests/: conftest.py
back-end/tests/api/: test_score_ingest.py  test_ws_integration.py
back-end/tests/core/: test_protocol.py  test_score.py  test_score_title.py  test_unvalidated_reason.py  test_validator.py
back-end/tests/features/: test_hub_register.py  test_midi_input.py  test_playback_speed.py
docs/: current-architecture.md  finish-plan.md  protocol-current.md
fixtures/: chords.json  fingering.json  invalid_bpm.json  invalid_missing_pitch.json  large-score.json  simple-scale.json  tempo-change.json  two-staves.json
front-end/: .gitignore  README.md  electron-builder.yml  electron.vite.config.ts  eslint.config.js  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
front-end/src/: main.js  preload.cjs
front-end/src/main/: index.ts
front-end/src/preload/: index.ts
front-end/src/renderer/: App.tsx  env.d.ts  index.html  main.tsx  piano-layout.js  piano.js  protocol.js  renderer.js  styles.css  timeline.js  waterfall.js  ws-client.js
front-end/test/: LogPanel.test.tsx  StatusChip.test.tsx  fingering-ui.test.ts  note-hand-colors.test.ts  piano-layout.test.mjs  piano-layout.test.ts  playback-reducer.test.ts  protocol.test.mjs  protocol.test.ts  setup.ts  timeline.test.mjs  timeline.test.ts  useWaterfall.test.tsx  ws-client.test.mjs  ws-client.test.ts
plugin/: Cadenza.qml  README.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  commands.rs  error.rs  file_log.rs  fingering_assign.rs  http_ingest.rs  lib.rs  midi.rs  playback.rs  plugin_install.rs  protocol.rs  timeline.rs  validator.rs
src-tauri/src/performer_fingering/: cost.rs  mod.rs
src/app/: AppProvider.test.tsx  AppProvider.tsx  AppShell.css  AppShell.test.tsx  AppShell.tsx  navigation.test.ts  navigation.ts  useAppStore.ts
src/app/screens/: HomeScreen.css  HomeScreen.test.tsx  HomeScreen.tsx  LoadScreen.css  LoadScreen.test.tsx  LoadScreen.tsx  PlayerScreen.css  PlayerScreen.test.tsx  PlayerScreen.tsx  SettingsOverlay.css  SettingsOverlay.test.tsx  SettingsOverlay.tsx
src/components/: EventLog.css  EventLog.test.tsx  EventLog.tsx  Piano.css  Piano.test.tsx  Piano.tsx  TimelineScrubber.css  TimelineScrubber.test.tsx  TimelineScrubber.tsx  Waterfall.css  Waterfall.test.tsx  Waterfall.tsx
src/components/decor/: IsometricStage.css  IsometricStage.test.tsx  IsometricStage.tsx
src/components/ui/: Button.test.tsx  Button.tsx  Card.test.tsx  Card.tsx  ScreenLayout.test.tsx  ScreenLayout.tsx  Select.css  Select.test.tsx  Select.tsx  Slider.test.tsx  Slider.tsx  (+2 more)
src/hooks/: useElementWidth.ts
src/lib/: event-log.test.ts  event-log.ts  fingering-ui.test.ts  fingering-ui.ts  geometry.ts  held-pitches.test.ts  held-pitches.ts  note-hand-colors.test.ts  note-hand-colors.ts  piano-layout.test.ts  piano-layout.ts  piano-theme.ts  playback-defaults.test.ts  playback-defaults.ts  timeline-preview.test.ts  timeline-preview.ts  timeline.test.ts  timeline.ts
src/styles/: components.css  design-tokens.css  typography.css
src/test/: flush-store.ts  setup.ts
(+120 files in other folders)
